# d2c-rs

./: Cargo.toml  README.md  bacon.toml
.github/: dependabot.yml
.github/workflows/: release.yml  rust.yml
src/: main.rs  sample_config.toml  usage.txt
