[package]
name = "d2c-rs"
version = "0.1.0"
readme = "README.md"
license = "MIT"
edition = "2021"
repository = "https://github.com/Riceman2000/d2c-rs"

[dependencies]
cloudflare = { git = "https://github.com/cloudflare/cloudflare-rs.git", rev = "f14720e42184ee176a97676e85ef2d2d85bc3aae" }
public-ip = "0.2.2"
serde = "1.0.208"
serde_derive = "1.0.208"
tokio = { version = "1.39.3", features = ["full"] }
toml = "0.8.19"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
